--- a/jaimewebdev.com/sass/main.scss
+++ b/jaimewebdev.com/sass/main.scss
@@ -1,10 +1,9 @@
 @import "animations";
-
 @import "variables";
 @import "base";
 @import "mixins";
-
 @import "about";
+@import "services";
 @import "components";
 @import "header";
 @import "navigation";
