--- a/jaimewebdev.com/sass/_about.scss
+++ b/jaimewebdev.com/sass/_about.scss
@@ -13,7 +13,7 @@
 //     z-index: -3;
 // }
 
-.about {
+.section__about {
     position: relative;
     display: flex;
     align-items: center;
@@ -57,123 +57,123 @@
         
     }
 
-    &__items {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 5rem;
+}
 
+.about__items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5rem;
+
+
+    @media only screen and (max-width: $bp-small) {
+        width: 100%;
+    }
+
+    @media only screen and (max-width: $bp-smaller) {
+        width: 100%;  
+    }
+
+    @media only screen and (max-width: $bp-smaller2) {
+        width: 100%;
+    }
+
+
+    span {
+        color: $color-secondary;
+        // font-size: 6rem;
+        font-size: 5rem;
+        font-weight: 700;
 
         @media only screen and (max-width: $bp-small) {
-            width: 100%;
+            font-size: 4.5rem;
         }
 
         @media only screen and (max-width: $bp-smaller) {
-            width: 100%;  
+            font-size: 4rem;
         }
 
         @media only screen and (max-width: $bp-smaller2) {
-            width: 100%;
-        }
-
-
-        span {
-            color: $color-secondary;
-            // font-size: 6rem;
-            font-size: 5rem;
-            font-weight: 700;
-
-            @media only screen and (max-width: $bp-small) {
-                font-size: 4.5rem;
-            }
-
-            @media only screen and (max-width: $bp-smaller) {
-                font-size: 4rem;
-            }
-
-            @media only screen and (max-width: $bp-smaller2) {
-                font-size: 3.5rem;
-            }
-        }
-
-        &-text {
-            font-size: 1.5rem;
-            font-weight: 500;
-            font-family: $font-primary;
-            color: $color-primary;
-            width: 75%;
-            letter-spacing: .5px;
-            line-height: 1.5;
-
-            @media only screen and (max-width: $bp-medium) {
-                width: 90%;
-                padding: 4.5rem 2rem 0 2rem;
-            }
-
-            @media only screen and (max-width: $bp-medium2) {
-                width: 90%;
-                padding: 3.5rem 2rem 0 2rem;
-            }
-
-            @media only screen and (max-width: $bp-small) {
-                font-size: 1.5rem;
-                padding: 3.5rem 1rem 0 1rem;
-                width: 90%;
-            }
-
-            @media only screen and (max-width: $bp-smaller) {
-                font-size: 1.5rem;
-                padding: 3.5rem 1rem 0 1rem;
-                width: 90%;
-            }
-
-            @media only screen and (max-width: $bp-smaller2) {
-                font-size: 1.5rem;
-                padding: 2.5rem 1rem 0 1rem;
-                width: 90%;
-            }
-
-        }
-
-
-        &-img {
-            filter: grayscale(50%);
-            width: 38%;
-            height: auto;
-            margin-right: 8rem;
-
-            @media only screen and (max-width: $bp-medium){
-                display: block;
-                width: 75%;
-                margin: 0 auto;
-              }
-
-            @media only screen and (max-width: $bp-medium2) {
-                display: block;
-                width: 80%;
-                margin: 0 auto;
-
-            }
-
-            @media only screen and (max-width: $bp-small) {
-                display: block;
-                width: 90%;
-                margin: 0 auto;
-
-            }
-
-            @media only screen and (max-width: $bp-smaller) {
-                display: block;
-                width: 100%;
-                margin: 0 auto;
-            }
-
-            @media only screen and (max-width: $bp-smaller2) {
-                display: block;
-                margin: 0 auto;
-                width: 100%;
-           }
+            font-size: 3.5rem;
         }
     }
 
+    &-text {
+        font-size: 1.4rem;
+        font-weight: 400;
+        font-family: $font-primary;
+        color: $color-primary;
+        width: 75%;
+        letter-spacing: .5px;
+        line-height: 1.5;
+
+        @media only screen and (max-width: $bp-medium) {
+            width: 90%;
+            padding: 4.5rem 2rem 0 2rem;
+        }
+
+        @media only screen and (max-width: $bp-medium2) {
+            width: 90%;
+            padding: 3.5rem 2rem 0 2rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.5rem;
+            padding: 3.5rem 1rem 0 1rem;
+            width: 90%;
+        }
+
+        @media only screen and (max-width: $bp-smaller) {
+            font-size: 1.5rem;
+            padding: 3.5rem 1rem 0 1rem;
+            width: 90%;
+        }
+
+        @media only screen and (max-width: $bp-smaller2) {
+            font-size: 1.5rem;
+            padding: 2.5rem 1rem 0 1rem;
+            width: 90%;
+        }
+
+    }
+
+
+    &-img {
+        filter: grayscale(50%);
+        width: 38%;
+        height: auto;
+        margin-right: 8rem;
+
+        @media only screen and (max-width: $bp-medium){
+            display: block;
+            width: 75%;
+            margin: 0 auto;
+          }
+
+        @media only screen and (max-width: $bp-medium2) {
+            display: block;
+            width: 80%;
+            margin: 0 auto;
+
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            display: block;
+            width: 90%;
+            margin: 0 auto;
+
+        }
+
+        @media only screen and (max-width: $bp-smaller) {
+            display: block;
+            width: 100%;
+            margin: 0 auto;
+        }
+
+        @media only screen and (max-width: $bp-smaller2) {
+            display: block;
+            margin: 0 auto;
+            width: 100%;
+       }
+    }
 }
