--- a/jaimewebdev.com/sass/_typography.scss
+++ b/jaimewebdev.com/sass/_typography.scss
@@ -121,9 +121,6 @@
     padding-top: 3rem;
 }
 
-
-
-
   &:after {
     content: "";
     position: absolute;
@@ -141,6 +138,16 @@
   }
 
 }
+
+.heading-tertiary {
+  font-size: 1.5rem;
+  color: $color-primary;
+  font-family: $font-primary;
+  text-transform: uppercase;
+  text-align: center;
+
+}
+
 .white {
   color: $color-white;
 }
