--- a/jaimewebdev.com/sass/_contact.scss
+++ b/jaimewebdev.com/sass/_contact.scss
@@ -192,6 +192,7 @@
             width: 18%;
             margin-left: 1rem;
             margin-top: 1rem;
+            padding: .8rem .6rem;
 
          }
 
