--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -60,6 +60,19 @@ body {
 a {
   text-decoration: none; }
 
+.row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+  grid-gap: 1.5rem;
+  margin: 0 auto;
+  width: 90%;
+  max-width: 80rem;
+  overflow: hidden;
+  padding-bottom: 4.5rem; }
+  @media only screen and (max-width: 25em) {
+    .row {
+      padding-bottom: 1rem; } }
+
 .section__about {
   position: relative;
   display: flex;
@@ -96,9 +109,9 @@ a {
   flex-direction: column;
   align-items: center;
   margin-bottom: 5rem; }
-  @media only screen and (max-width: 37.5em) {
+  @media only screen and (max-width: 50em) {
     .about__items {
-      width: 100%; } }
+      margin-bottom: 0rem; } }
   @media only screen and (max-width: 25em) {
     .about__items {
       width: 100%; } }
@@ -128,8 +141,9 @@ a {
     line-height: 1.5; }
     @media only screen and (max-width: 50em) {
       .about__items-text {
-        width: 90%;
-        padding: 4.5rem 2rem 0 2rem; } }
+        width: 80%;
+        padding: 5.5rem 2rem 0 2rem;
+        text-align: center; } }
     @media only screen and (max-width: 43.57em) {
       .about__items-text {
         width: 90%;
@@ -182,14 +196,29 @@ a {
 
 .section__services {
   padding: 0 0 7rem 0; }
+  @media only screen and (max-width: 75em) {
+    .section__services {
+      background-color: antiquewhite; } }
+  @media only screen and (max-width: 50em) {
+    .section__services {
+      background-color: aqua;
+      padding-bottom: 2.5rem; } }
 
 .services__container {
   display: flex; }
+  @media only screen and (max-width: 50em) {
+    .services__container {
+      display: block; } }
 
 .services__content {
   display: flex;
   flex-flow: column;
   padding: 1rem; }
+  @media only screen and (max-width: 50em) {
+    .services__content {
+      display: block;
+      text-align: center;
+      padding: 1.8rem; } }
   .services__content-icon {
     margin-bottom: 2.5rem;
     text-align: center; }
@@ -364,10 +393,10 @@ a {
         margin-top: 26rem; } }
     @media only screen and (max-width: 25em) {
       .popup__right {
-        margin-top: 28rem; } }
+        margin-top: 30rem; } }
     @media only screen and (max-width: 23.43em) {
       .popup__right {
-        margin-top: -3rem; } }
+        margin-top: 2rem; } }
   .popup__img {
     position: absolute;
     top: 10%;
@@ -391,7 +420,7 @@ a {
         left: 10%; } }
     @media only screen and (max-width: 25em) {
       .popup__img {
-        width: 93%;
+        width: 80%;
         top: 9%; } }
     @media only screen and (max-width: 23.43em) {
       .popup__img {
@@ -662,16 +691,6 @@ button.scroll_down:before {
   @media only screen and (max-width: 23.43em) {
     #projects {
       padding-bottom: 2rem; } }
-
-.row {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
-  grid-gap: 1.5rem;
-  margin: 0 auto;
-  width: 90%;
-  max-width: 80rem;
-  overflow: hidden;
-  padding-bottom: 4.5rem; }
 
 .portfolio-content {
   position: relative;
@@ -1116,7 +1135,8 @@ button.scroll_down:before {
     .form .btn__form-send {
       width: 18%;
       margin-left: 1rem;
-      margin-top: 1rem; } }
+      margin-top: 1rem;
+      padding: .8rem .6rem; } }
   @media only screen and (max-width: 25em) {
     .form .btn__form-send {
       width: 18%;
