--- a/jaimewebdev.com/sass/_base.scss
+++ b/jaimewebdev.com/sass/_base.scss
@@ -50,3 +50,19 @@ body {
 a {
     text-decoration: none;
 }
+
+.row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+    grid-gap: 1.5rem;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 80rem;
+    overflow: hidden;
+    padding-bottom: 4.5rem;
+
+    @media only screen and (max-width: $bp-smaller) {
+        padding-bottom: 1rem;
+    }
+
+}
