--- a/jaimewebdev.com/sass/_components.scss
+++ b/jaimewebdev.com/sass/_components.scss
@@ -245,7 +245,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: $bg-overlay;
+    // background-color: $bg-overlay;
     opacity: 0;
     visibility: hidden;
     @include easeOut3s;
