--- a/jaimewebdev.com/sass/_contact.scss
+++ b/jaimewebdev.com/sass/_contact.scss
@@ -3,7 +3,7 @@
     padding: 2rem 0 8rem 0;
     background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg-header.jpg);
     background-size: cover;
-    // background-repeat: no-repeat;
+    background-repeat: no-repeat;
     // background-attachment: fixed;
     background-position: center center;
     // @include bgContact;
