--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -3,7 +3,7 @@
     // background-image: url(../img/projects-bg.jpg);
     background-size: cover;
     // background-repeat: no-repeat;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     background-position: center center;
     // overflow: hidden;
     @include projectsBg-mobile;
@@ -12,7 +12,8 @@
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
     only screen and (min-width: 125em) {
-        background-image: linear-gradient(rgba($color-terceary, .6), rgba($color-terceary, .6)), url(../img/bg-projects2.jpg);
+        background-image: linear-gradient(rgba($color-terceary, .8), rgba($color-terceary, .8)), url(../img/bg-projects2.jpg);
+        background-attachment: fixed;
 
     }
 
