--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -63,9 +63,9 @@ a {
 .row {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
-  grid-gap: 1.8rem;
+  grid-gap: 1.5rem;
   margin: 0 auto;
-  width: 100%;
+  width: 95%;
   max-width: 80rem;
   overflow: hidden;
   padding-bottom: 4.5rem; }
@@ -142,8 +142,7 @@ a {
     @media only screen and (max-width: 50em) {
       .about__items-text {
         width: 80%;
-        padding: 5.5rem 2rem 0 2rem;
-        text-align: center; } }
+        padding: 5.5rem 2rem 0 2rem; } }
     @media only screen and (max-width: 43.57em) {
       .about__items-text {
         width: 90%;
@@ -624,9 +623,10 @@ button.scroll_down:before {
 .nav-item:nth-child(6) {
   transition-delay: 0.6s; }
 
-#projects {
+.projects__section {
   position: relative;
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center center;
   background-image: linear-gradient(rgba(227, 231, 236, 0.6), rgba(227, 231, 236, 0.6)), url(../img/bg-projects2-small.jpg);
   background-size: cover;
@@ -636,23 +636,23 @@ button.scroll_down:before {
   position: relative;
   padding-bottom: 4rem; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
-    #projects {
+    .projects__section {
       background-image: linear-gradient(rgba(242, 244, 246, 0.8), rgba(242, 244, 246, 0.8)), url(../img/bg-projects2.jpg);
       background-attachment: fixed; } }
   @media only screen and (max-width: 43.57em) {
-    #projects {
+    .projects__section {
       padding-bottom: 2rem; } }
   @media only screen and (max-width: 23.43em) {
-    #projects {
+    .projects__section {
       padding-bottom: 2rem; } }
 
-.portfolio-content {
+.project-content {
   position: relative;
   font-family: inherit;
   color: #00ADDA;
   overflow: hidden;
   width: 100%; }
-  .portfolio-content .content-overlay {
+  .project-content .content-overlay {
     position: absolute;
     background: rgba(0, 0, 0, 0.8);
     height: 98%;
@@ -664,24 +664,24 @@ button.scroll_down:before {
     opacity: 0;
     transition: all 0.4s ease-out; }
     @media only screen and (max-width: 50em) {
-      .portfolio-content .content-overlay {
+      .project-content .content-overlay {
         opacity: 1;
         background: rgba(0, 0, 0, 0.8); } }
     @media only screen and (max-width: 43.57em) {
-      .portfolio-content .content-overlay {
+      .project-content .content-overlay {
         opacity: 1;
         background: rgba(0, 0, 0, 0.8); } }
     @media only screen and (max-width: 37.5em) {
-      .portfolio-content .content-overlay {
+      .project-content .content-overlay {
         opacity: 1;
         background: rgba(0, 0, 0, 0.8); } }
     @media only screen and (max-width: 25em) {
-      .portfolio-content .content-overlay {
+      .project-content .content-overlay {
         opacity: 1;
         background: rgba(0, 0, 0, 0.8); } }
-  .portfolio-content:hover .content-overlay {
+  .project-content:hover .content-overlay {
     opacity: 1; }
-  .portfolio-content:before {
+  .project-content:before {
     position: absolute;
     top: 50%;
     right: 30px;
@@ -694,7 +694,7 @@ button.scroll_down:before {
     background-color: #fff;
     transition: all 0.4s ease-out;
     transition-delay: 0.4s; }
-  .portfolio-content:hover:before {
+  .project-content:hover:before {
     background: rgba(255, 255, 255, 0);
     top: 40px;
     bottom: 40px;
@@ -702,11 +702,11 @@ button.scroll_down:before {
     transition: all 0.4s ease-out;
     transition-delay: 0s;
     z-index: 1; }
-  .portfolio-content img {
+  .project-content img {
     width: 100%;
     height: auto;
     background: rgba(0, 0, 0, 0.5); }
-  .portfolio-content__text {
+  .project-content__text {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -716,7 +716,7 @@ button.scroll_down:before {
     align-items: center;
     width: 100%;
     height: 100%; }
-  .portfolio-content__text-sub-title {
+  .project-content__text-sub-title {
     transition: all 0.4s ease-out;
     font-size: 1.5rem;
     font-weight: 200;
@@ -725,23 +725,23 @@ button.scroll_down:before {
     transform: translate(0, -7px);
     opacity: 0; }
     @media only screen and (max-width: 50em) {
-      .portfolio-content__text-sub-title {
+      .project-content__text-sub-title {
         opacity: 1; } }
     @media only screen and (max-width: 43.57em) {
-      .portfolio-content__text-sub-title {
+      .project-content__text-sub-title {
         opacity: 1; } }
     @media only screen and (max-width: 37.5em) {
-      .portfolio-content__text-sub-title {
+      .project-content__text-sub-title {
         opacity: 1; } }
     @media only screen and (max-width: 25em) {
-      .portfolio-content__text-sub-title {
+      .project-content__text-sub-title {
         opacity: 1; } }
-  .portfolio-content:hover .portfolio-content__text-sub-title {
+  .project-content:hover .project-content__text-sub-title {
     transition: all 0.4s ease-out;
     transform: translate(0, 0);
     opacity: 1;
     transition-delay: 0.4s; }
-  .portfolio-content__text-title {
+  .project-content__text-title {
     transition: all 0.4s ease-out;
     font-weight: 800;
     text-transform: uppercase;
@@ -750,23 +750,23 @@ button.scroll_down:before {
     opacity: 0;
     font-size: 2rem; }
     @media only screen and (max-width: 50em) {
-      .portfolio-content__text-title {
+      .project-content__text-title {
         opacity: 1; } }
     @media only screen and (max-width: 43.57em) {
-      .portfolio-content__text-title {
+      .project-content__text-title {
         opacity: 1; } }
     @media only screen and (max-width: 37.5em) {
-      .portfolio-content__text-title {
+      .project-content__text-title {
         opacity: 1; } }
     @media only screen and (max-width: 25em) {
-      .portfolio-content__text-title {
+      .project-content__text-title {
         opacity: 1; } }
-  .portfolio-content:hover .portfolio-content__text-title {
+  .project-content:hover .project-content__text-title {
     transition: all 0.4s ease-out;
     transform: translate(0, 0);
     opacity: 1;
     transition-delay: 0.4s; }
-  .portfolio-content__link {
+  .project-content__link {
     transition: all 0.4s ease-out;
     font-size: 1rem;
     font-weight: 700;
@@ -779,23 +779,23 @@ button.scroll_down:before {
     opacity: 0;
     z-index: 2; }
     @media only screen and (max-width: 50em) {
-      .portfolio-content__link {
+      .project-content__link {
         opacity: 1; } }
     @media only screen and (max-width: 43.57em) {
-      .portfolio-content__link {
+      .project-content__link {
         opacity: 1; } }
     @media only screen and (max-width: 37.5em) {
-      .portfolio-content__link {
+      .project-content__link {
         opacity: 1; } }
     @media only screen and (max-width: 25em) {
-      .portfolio-content__link {
+      .project-content__link {
         opacity: 1; } }
-  .portfolio-content:hover .portfolio-content__link {
+  .project-content:hover .project-content__link {
     transition: all 0.4s ease-out;
     transform: translate(0, 0);
     opacity: 1;
     transition-delay: 0.4s; }
-  .portfolio-content__link:hover {
+  .project-content__link:hover {
     transition: all 0.4s ease-out;
     background-color: #fff;
     color: #444;
