--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -1,11 +1,9 @@
-#projects {
+.projects__section {
     position: relative;
-    // background-image: url(../img/projects-bg.jpg);
     background-size: cover;
-    // background-repeat: no-repeat;
+    background-repeat: no-repeat;
     // background-attachment: fixed;
     background-position: center center;
-    // overflow: hidden;
     @include projectsBg-mobile;
     padding-bottom: 4rem;
 
@@ -32,7 +30,7 @@
 
 }
 
-.portfolio-content {
+.project-content {
     position: relative;
     font-family: inherit;
     color: $color-secondary;
