--- a/jaimewebdev.com/sass/_about.scss
+++ b/jaimewebdev.com/sass/_about.scss
@@ -4,19 +4,16 @@
     align-items: center;
     height: auto;
     @include lenearGradient;
-
-    // background-image: -webkit-linear-gradient(-75deg, $color-black  50%, $color-black 45%, $color-black-3 $color-black-3 30%);
-    // background-image: linear-gradient(-75deg, $color-black 50%, $color-black 45%, $color-black-3 30%, $color-black-3 30%);
+    // background-image: linear-gradient(-75deg, $color-terceary-dark 45%, $color-terceary-dark 40%, $color-terceary 30%, $color-terceary 30%);
     
     @media only screen and (max-width: $bp-large) {
         background: none;
     }
     
-  @media only screen and (max-width: $bp-medium){
-    background: $color-terceary-dark;
-    display: block;
-
-  }
+    @media only screen and (max-width: $bp-medium){
+        background: $color-terceary-dark;
+        display: block;
+    }
 
     @media only screen and (max-width: $bp-medium2) {
         background: $color-terceary-dark;
@@ -66,7 +63,6 @@
 
     span {
         color: $color-secondary;
-        // font-size: 6rem;
         font-size: 5rem;
         font-weight: 700;
 
@@ -95,7 +91,6 @@
         @media only screen and (max-width: $bp-medium) {
             width: 80%;
             padding: 5.5rem 2rem 0 2rem;
-            // text-align: center;
         }
 
         @media only screen and (max-width: $bp-medium2) {
@@ -125,7 +120,7 @@
 
 
     &-img {
-        filter: grayscale(50%);
+        filter: grayscale(30%);
         width: 38%;
         height: auto;
         margin-right: 8rem;
@@ -140,14 +135,12 @@
             display: block;
             width: 80%;
             margin: 0 auto;
-
         }
 
         @media only screen and (max-width: $bp-small) {
             display: block;
             width: 90%;
             margin: 0 auto;
-
         }
 
         @media only screen and (max-width: $bp-smaller) {
