--- a/jaimewebdev.com/sass/_animations.scss
+++ b/jaimewebdev.com/sass/_animations.scss
@@ -38,17 +38,13 @@
 }
 
 .js--wp-1,
-.js--wp-2,
-.js--wp-3,
-.js--wp-4 {
+.js--wp-2 {
     opacity: 0;
     animation-duration: 1s;
 }
 
 .js--wp-1.animated,
-.js--wp-2.animated,
-.js--wp-3.animated,
-.js--wp-4.animated {
+.js--wp.animated {
     opacity: 1;
 }
 
