--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -431,16 +431,16 @@ a {
     transition: all .3s ease-out; }
 
 .header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/background.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center right;
+  background-position: center center;
   position: relative;
   height: 100vh;
   z-index: 4; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/background-small.jpg);
+      background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-home-small.jpg);
       background-attachment: fixed; } }
 
 .main-heading {
@@ -476,7 +476,6 @@ button.scroll_down:before {
   margin-left: -3px;
   background-color: #fff;
   border-radius: 100%;
-  -webkit-animation: scroll_down_btn-animation 2s infinite;
   animation: scroll_down_btn-animation 2s infinite;
   box-sizing: border-box; }
 
@@ -494,13 +493,11 @@ button.scroll_down:before {
 
 @-webkit-keyframes scroll_down_btn-animation {
   0% {
-    -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
     opacity: 0; }
   40% {
     opacity: 1; }
   80% {
-    -webkit-transform: translate(0, 20px);
     transform: translate(0, 20px);
     opacity: 0; }
   100% {
@@ -619,15 +616,15 @@ button.scroll_down:before {
   transition-delay: 0.6s; }
 
 .projects__section {
-  position: relative;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
   background-color: #e3e7ec;
   padding-bottom: 4rem; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .projects__section {
-      background-image: linear-gradient(rgba(242, 244, 246, 0.8), rgba(242, 244, 246, 0.8)), url(../img/bg-projects2.jpg);
+      background-image: linear-gradient(rgba(227, 231, 236, 0.6), rgba(227, 231, 236, 0.6)), url(../img/bg-projects-small.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      position: relative;
       background-attachment: fixed; } }
   @media only screen and (max-width: 43.57em) {
     .projects__section {
@@ -964,15 +961,15 @@ button.scroll_down:before {
   color: #e67e22; }
 
 .section__contact {
-  position: relative;
   padding: 2rem 0 8rem 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-header.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-contact.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center; }
+  background-position: center center;
+  position: relative; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .section__contact {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-header-small.jpg);
+      background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-contact-small.jpg);
       background-attachment: fixed; } }
   @media only screen and (max-width: 43.57em) {
     .section__contact {
@@ -1072,15 +1069,14 @@ button.scroll_down:before {
   text-transform: uppercase;
   border-radius: 5px;
   background: transparent;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1.3rem;
   margin-top: 2.2rem;
   cursor: pointer; }
   @media only screen and (max-width: 37.5em) {
     .form .btn__form-send {
       width: 18%;
-      margin-left: 1rem;
-      margin-top: 1rem;
+      margin: 1rem 0 0 1rem;
       padding: .8rem .6rem; } }
   @media only screen and (max-width: 25em) {
     .form .btn__form-send {
